--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
-    "puppeteer": "^22.10.0",
+    "puppeteer-core": "^22.10.0",
     "react": "^18",
     "react-dom": "^18"
   },
