--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
-    "dotenv": "^16.4.5",
+    "chromium": "^3.0.3",
     "next": "14.2.3",
-    "puppeteer-core": "^22.10.0",
+    "playwright": "^1.44.1",
     "react": "^18",
     "react-dom": "^18"
   },
